start as module, move some files

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-restarter.txt
-/telethon_config.toml
+.git/
+!*example
+config/
 log/
 user/
-.git/
-*.session
-*.session-journal
-/config.toml
+venv/
 __pycache__
-venv*
+restarter.txt
+*.session
+*.session-jonrnal
+
